tests/machine/x/c/user_type_literal.error
exit status 1
/workspace/mochi/tests/machine/x/c/user_type_literal.c:14:3: error: unknown type name ‘person_t’
   14 |   person_t *data;
      |   ^~~~~~~~
/workspace/mochi/tests/machine/x/c/user_type_literal.c: In function ‘create_person_list’:
/workspace/mochi/tests/machine/x/c/user_type_literal.c:19:31: error: ‘person_t’ undeclared (first use in this function); did you mean ‘Person’?
   19 |   l.data = calloc(len, sizeof(person_t));
      |                               ^~~~~~~~
      |                               Person
/workspace/mochi/tests/machine/x/c/user_type_literal.c:19:31: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/user_type_literal.c: At top level:
/workspace/mochi/tests/machine/x/c/user_type_literal.c:33:3: error: unknown type name ‘book_t’
   33 |   book_t *data;
      |   ^~~~~~
/workspace/mochi/tests/machine/x/c/user_type_literal.c: In function ‘create_book_list’:
/workspace/mochi/tests/machine/x/c/user_type_literal.c:38:31: error: ‘book_t’ undeclared (first use in this function); did you mean ‘Book’?
   38 |   l.data = calloc(len, sizeof(book_t));
      |                               ^~~~~~
      |                               Book
/workspace/mochi/tests/machine/x/c/user_type_literal.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/user_type_literal.c:47:3: error: unknown type name ‘book_t’; did you mean ‘Book’?
   47 |   book_t book =
      |   ^~~~~~
      |   Book
/workspace/mochi/tests/machine/x/c/user_type_literal.c:48:7: error: incompatible types when initializing type ‘int’ using type ‘Book’ {aka ‘struct Book’}
   48 |       (Book){.title = "Go", .author = (Person){.name = "Bob", .age = 42}};
      |       ^
/workspace/mochi/tests/machine/x/c/user_type_literal.c:49:22: error: request for member ‘author’ in something not a structure or union
   49 |   printf("%s\n", book.author.name);
      |                      ^
