tests/machine/x/c/user_type_literal.c
// Generated by Mochi compiler v0.10.27 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct person_t person_t;
typedef struct book_t book_t;

typedef struct person_t {
  char *name;
  int age;
} person_t;
typedef struct {
  int len;
  person_t *data;
} person_list_t;
person_list_t create_person_list(int len) {
  person_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(person_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct book_t {
  char *title;
  person_t author;
} book_t;
typedef struct {
  int len;
  book_t *data;
} book_list_t;
book_list_t create_book_list(int len) {
  book_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(book_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int _mochi_main() {
  book_t book =
      (book_t){.title = "Go", .author = (person_t){.name = "Bob", .age = 42}};
  printf("%s\n", book.author.name);
  return 0;
}
int main() { return _mochi_main(); }
